--- a/server/package.json
+++ b/server/package.json
@@ -27,22 +27,27 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.4.6",
+    "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/platform-socket.io": "^10.4.7",
     "@nestjs/schedule": "^4.1.1",
-    "@nestjs/websockets": "^10.4.6",
-    "@prisma/client": "^5.19.0",
+    "@nestjs/websockets": "^10.4.7",
+    "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.4.0",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "dropbox": "^10.34.0",
+    "express-session": "^1.18.1",
+    "ioredis": "^5.4.1",
+    "msgpackr": "^1.11.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
@@ -53,6 +58,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
@@ -65,7 +71,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.19.0",
+    "prisma": "^5.22.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
