--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
         "@emoji-mart/data": "^1.2.1",
         "@emoji-mart/react": "^1.1.1",
         "@hookform/resolvers": "^3.9.0",
+        "@livekit/components-react": "^2.6.7",
+        "@livekit/components-styles": "^1.1.4",
         "@nextui-org/react": "^2.4.6",
         "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.2",
@@ -36,12 +38,14 @@
         "date-fns": "^4.1.0",
         "emoji-mart": "^5.6.0",
         "lucide-react": "^0.379.0",
+        "mediasoup-client": "^3.7.18",
         "next": "^14.2.7",
         "next-themes": "^0.3.0",
         "query-string": "^9.1.1",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.53.0",
+        "sdp-transform": "^2.15.0",
         "socket.io-client": "^4.8.1",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
@@ -54,6 +58,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/sdp-transform": "^2.4.9",
         "@types/uuid": "^10.0.0",
         "eslint": "^8",
         "eslint-config-next": "14.2.3",
