--- a/server/package.json
+++ b/server/package.json
@@ -28,9 +28,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.4.7",
-    "@nestjs/platform-socket.io": "^10.4.7",
+    "@nestjs/platform-socket.io": "^10.4.8",
     "@nestjs/schedule": "^4.1.1",
-    "@nestjs/websockets": "^10.4.7",
+    "@nestjs/throttler": "^6.2.1",
+    "@nestjs/websockets": "^10.4.8",
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
     "cache-manager": "^5.7.6",
@@ -50,7 +51,8 @@
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "winston": "^3.14.2",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -96,5 +98,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "bundledDependencies": [
+    "node-pre-gyp"
+  ],
+  "bundleDependencies": [
+    "node-pre-gyp"
+  ]
 }
