--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -20,6 +20,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "typeRoots": ["./node_modules/@types", "./src/@types"]
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "moduleResolution": "node",
+    "esModuleInterop": true
   }
 }
