--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,8 @@
     "express-session": "^1.18.1",
     "ioredis": "^5.4.1",
     "msgpackr": "^1.11.2",
+    "multer": "^1.4.5-lts.1",
+    "nestjs-twilio": "^4.4.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
@@ -55,7 +57,7 @@
     "wrtc": "^0.4.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/cookie-parser": "^1.4.7",
@@ -72,6 +74,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "node-pre-gyp": "^0.17.0",
     "prettier": "^3.0.0",
     "prisma": "^5.22.0",
     "source-map-support": "^0.5.21",
@@ -98,11 +101,5 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "bundledDependencies": [
-    "node-pre-gyp"
-  ],
-  "bundleDependencies": [
-    "node-pre-gyp"
-  ]
+  }
 }
